adapt to change in soft-hyphen rendering strategy in Qt 4 diagnosed by Allan.

BUG: 145335

svn path=/trunk/KDE/kdelibs/; revision=971237